Task 2: API tests, docker, CI/CD, error logging

--- a/package.json
+++ b/package.json
@@ -2,11 +2,27 @@
     "name": "uitop-test-task",
     "version": "1.0.0",
     "main": "index.js",
-    "scripts": {},
+    "scripts": {
+        "test": "npx playwright test",
+        "test:ui": "npx playwright test tests/sign-in.test.ts tests/create-custom-project.test.ts",
+        "test:api": "npx playwright test tests/api.test.ts",
+        "test:headed": "npx playwright test --headed",
+        "test:debug": "npx playwright test --debug",
+        "test:ui-mode": "npx playwright test --ui",
+        "test:chromium": "npx playwright test --project=chromium",
+        "test:firefox": "npx playwright test --project=firefox",
+        "test:webkit": "npx playwright test --project=webkit",
+        "report": "npx playwright show-report",
+        "docker:build": "docker build -t playwright-tests .",
+        "docker:run": "docker-compose up",
+        "docker:run-detached": "docker-compose up -d",
+        "docker:down": "docker-compose down",
+        "format": "npx prettier --write ."
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "description": "",
+    "description": "Playwright test automation framework with UI and API testing, Docker support, and CI/CD integration",
     "devDependencies": {
         "@playwright/test": "^1.58.2",
         "@types/node": "^25.2.3",
