fix for firefox run on Github Actions

--- a/.github/workflows/playwright-docker.yml
+++ b/.github/workflows/playwright-docker.yml
@@ -22,6 +22,8 @@ jobs:
         runs-on: ubuntu-latest
         container:
             image: mcr.microsoft.com/playwright:v1.58.2-jammy
+        env:
+            HOME: /root
 
         steps:
             - uses: actions/checkout@v4
